[gd_scene load_steps=12 format=3 uid="uid://2pjv1yaabpd7"]

[ext_resource type="PackedScene" uid="uid://c6ks6xfft7yt" path="res://cenas/Nave.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dtvps0uqr466m" path="res://cenas/background.tscn" id="2_uigw6"]
[ext_resource type="AudioStream" uid="uid://b8unih4kknkxw" path="res://audios/starwarstheme.ogg" id="3"]
[ext_resource type="Script" path="res://scripts/Mundo.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://ltx2au65wid5" path="res://cenas/Meteoro.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://nvglwdmx63ef" path="res://cenas/Controles.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://b0dxv3ndmlvvu" path="res://cenas/temporizador.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cteirikhh8pos" path="res://cenas/escudo_item.tscn" id="9_xa6vv"]
[ext_resource type="PackedScene" uid="uid://c66tiay1tyqmb" path="res://cenas/vida.tscn" id="10"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(90.375, 1604.25)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1105, 68)

[node name="Mundo" type="Node2D"]
script = ExtResource("5")

[node name="Background" parent="." instance=ExtResource("2_uigw6")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(254.998, 415.804)
stream = ExtResource("3")
autoplay = true

[node name="Nave" parent="." instance=ExtResource("1")]
position = Vector2(530.998, 1412.8)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(209.998, 435.804)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-254.998, 361.196)
shape = SubResource("3")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(195.998, 388.804)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(929.001, 379.196)
shape = SubResource("3")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(236.998, 468.804)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(310.002, 1729.2)
shape = SubResource("4")

[node name="Position1" type="Marker2D" parent="."]
show_behind_parent = true
position = Vector2(148, -172)

[node name="Position2" type="Marker2D" parent="."]
show_behind_parent = true
position = Vector2(349, -174)

[node name="Position3" type="Marker2D" parent="."]
show_behind_parent = true
position = Vector2(540, -186)

[node name="Position4" type="Marker2D" parent="."]
show_behind_parent = true
position = Vector2(739, -196)

[node name="Position5" type="Marker2D" parent="."]
show_behind_parent = true
position = Vector2(926, -203)

[node name="Controles" parent="." instance=ExtResource("8")]

[node name="temporizador" parent="." instance=ExtResource("9")]
position = Vector2(-30, -7)

[node name="vida" parent="." instance=ExtResource("10")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 44.0
offset_top = 97.0
offset_right = 44.0
offset_bottom = 97.0
grow_horizontal = 1
grow_vertical = 1

[node name="Itens" type="Node2D" parent="."]

[node name="EscudoItem" parent="Itens" instance=ExtResource("9_xa6vv")]
position = Vector2(533, 1118)

[node name="Meteoro5" parent="." instance=ExtResource("7")]
position = Vector2(661, -694)

[node name="Meteoro" parent="." instance=ExtResource("7")]
position = Vector2(914, -366)

[node name="Meteoro6" parent="." instance=ExtResource("7")]
position = Vector2(112, -1400)

[node name="Meteoro4" parent="." instance=ExtResource("7")]
position = Vector2(365, -1072)

[node name="Meteoro2" parent="." instance=ExtResource("7")]
position = Vector2(518, 129)

[node name="Meteoro3" parent="." instance=ExtResource("7")]
position = Vector2(182, -194)

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
